--- a/package.json
+++ b/package.json
@@ -132,7 +132,8 @@
     "ws": "^8.17.1",
     "@babel/runtime": "7.28.4",
     "brace-expansion@^1.1.7": "1.1.12",
-    "brace-expansion@^2.0.1": "2.0.2"
+    "brace-expansion@^2.0.1": "2.0.2",
+    "axios": "^1.12.0"
   },
   "lint-staged": {
     "*": [
